2007-05-02  Wakaba  <wakaba@suika.fam.cx>

	* NanoDOM.pm (DOMImplementation): New class.
	(append_child): Weaken the |parent_node| reference.
	(create_element_ns, Element new): Set the |owner_document|
	reference.
	(implementation): New attribute.
	(owner_document, local_name, namespace_uri): New attributes.

	* HTML.pm.src (parse_string): Line and column numbers
	are now provided to error handler.
	(!!!parse-error): Short descriptions are added.
	(_construct_tree): Split into three methods; support
	for innerHTML mode.
	(set_inner_html): New method.

2007-05-01  Wakaba  <wakaba@suika.fam.cx>

	* NanoDOM.html: Documentation is added.

	* HTML.pod, ContentType.html: Documentation is revised.

	* .cvsignore: Pod2html temporary files are added.

	* Makefile: Make |NanoDOM.html|.

2007-05-01  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (parse_string): New method.
	(get_inner_html): Renamed from |inner_html|.

	* Makefile: A rule for |HTML.html| is added.

	* HTML.pod: New documentation.

2007-05-01  Wakaba  <wakaba@suika.fam.cx>

	* NanoDOM.pm (last_child, previous_sibling): New attributes.
	(clone_node): Attribute nodes were not completely copied.

	* HTML.pm.src: Many bugs are fixed.

2007-04-30  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Some typos are fixed.

2007-04-30  Wakaba  <wakaba@suika.fam.cx>

	* mkhtmlparser.pl, Makefile: References to the |HTML-consume-entity.src|
	are removed.

	* HTML.pm.src: Tokenizer's handling on named entities are rewritten.

	* HTML-consume-entity.src: Removed.

2007-04-30  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Tokenizer's handling on hexadecimal
	numeric entities are rewritten.

2007-04-30  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Some tokenizer bugs are fixed.

2007-04-30  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: The tree construction stage is implemented.

	* mkhtmlparser.pl: New macros are added.

2007-04-28  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: A note on bug in the specification