@@ -1,3 +1,14 @@
+2007-05-03  Wakaba  <wakaba@suika.fam.cx>
+
+	* tokenizer-test-1.test: Incorrect DOCTYPE testa
+	are added.
+
+	* tree-test-1.dat: |innerHTML| tests are added.
+
+2007-05-03  Wakaba  <wakaba@suika.fam.cx>
+
+	* LICENSE: New document.
+
 2007-05-02  Wakaba  <wakaba@suika.fam.cx>
 
 	* .cvsignore: Result files are added.
