@@ -1,3 +1,15 @@
+2007-05-04  Wakaba  <wakaba@suika.fam.cx>
+
+	* NanoDOM.pm (manakai_parent_element,
+	document_element, manakai_local_name,
+	manakai_element_type_match): New method.
+
+2007-05-03  Wakaba  <wakaba@suika.fam.cx>
+
+	* HTML.pm.src: Replace decimal and hexadecimal numeric
+	entities in C1 range using Windows-1252 mapping.  Bare LF
+	did not count as new line for error reporting.
+
 2007-05-02  Wakaba  <wakaba@suika.fam.cx>
 
 	* NanoDOM.pm (DOMImplementation): New class.
